# clipboard-sync-rs

./: Cargo.toml  readme.md
.github/workflows/: rust.yml
src/: clipboard.rs  main.rs  server.rs  transmitter.rs
