[package]
name = "clipboard-sync-rs"
version = "0.1.0"
edition = "2021"
authors = ["Manuel Lerchner"]
description = "Clipboard Sync is a tool to synchronize the clipboard between multiple devices."


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
rocket = "0.4.10"
copypasta = "0.8.1"
mki = "0.2.3"
reqwest = { version = "0.10", features = ["blocking", "json"] }
serde = { version = "1.0.130", features = ["derive"] }
hostname = "^0.3"

[dependencies.rocket_contrib]
version = "0.4.10"
default-features = false
features = ["json"]